--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,10 +12,12 @@ frontend:
   themes: !include_dir_merge_named themes
 
 group: !include groups.yaml
-automation frontend: !include automations.yaml
-automation: !include_dir_merge_list automations
+automation: !include automations.yaml
+automation yaml: !include_dir_merge_list automations
 script: !include scripts.yaml
+script yaml: !include_dir_merge_named scripts
 scene: !include scenes.yaml
+scene yaml: !include_dir_merge_named scenes
 
 recorder:
   purge_keep_days: 3
