--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,8 +14,7 @@ scene: !include scenes.yaml
 scene yaml: !include_dir_merge_list scenes
 template: !include_dir_merge_list templates
 
-recorder:
-  purge_keep_days: 3
+recorder: !include recorder.yaml
 
 wake_on_lan:
 
