--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,23 +2,19 @@ default_config:
 
 homeassistant:
   packages: !include_dir_named packages
-  customize:
-    zone.marcus_iphone_stationary:
-      track_ios: false
 
-frontend:
-  extra_module_url:
-    - /hacsfiles/hass-bha-icons/hass-bha-icons.js
-  themes: !include_dir_merge_named themes
+frontend: !include frontend.yaml
 
 group: !include groups.yaml
-automation frontend: !include automations.yaml
-automation: !include_dir_merge_list automations
+automation: !include automations.yaml
+automation yaml: !include_dir_merge_list automations
 script: !include scripts.yaml
+script yaml: !include_dir_merge_named scripts
 scene: !include scenes.yaml
+scene yaml: !include_dir_merge_list scenes
+template: !include_dir_merge_list templates
 
-recorder:
-  purge_keep_days: 3
+recorder: !include recorder.yaml
 
 wake_on_lan:
 
