--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,7 @@ scene: !include scenes.yaml
 scene yaml: !include_dir_merge_list scenes
 template: !include_dir_merge_list templates
 
+panel_custom: !include panel_custom.yaml
 recorder: !include recorder.yaml
 
 wake_on_lan:
