--- a/logbook.yaml
+++ b/logbook.yaml
@@ -12,6 +12,7 @@ exclude:
     - climate
     - device_tracker
     - fan
+    - group
     - input_boolean
     - input_button
     - input_datetime
@@ -30,3 +31,8 @@ exclude:
     - timer
     - weather
     - zone
+
+  entities:
+    - sensor.date
+    - sensor.date_time
+    - sensor.time
