--- a/recorder.yaml
+++ b/recorder.yaml
@@ -2,25 +2,38 @@
 # Recorder - https://www.home-assistant.io/integrations/recorder/
 
 purge_keep_days: 31
+exclude:
+  entities:
+    - sensor.date
+    - sensor.date_time
+    - sensor.time
+
 include:
   domains:
     - alarm_control_panel
     - alert
+    - automation
     - binary_sensor
     - calendar
     - climate
     - cover
     - device_tracker
     - fan
+    - group
     - input_boolean
+    - input_number
     - input_select
+    - input_text
     - light
+    - media_player
     - lock
     - person
+    - remote
     - script
     - switch
     - timer
     - utility_meter
+    - vacuum
   entity_globs:
     - sensor.*_cpu_percent
     - sensor.*_daily
