--- a/packages/alerts.yaml
+++ b/packages/alerts.yaml
@@ -5,13 +5,100 @@ group:
     entities:
       - input_boolean.bluetooth_alerts
       - input_boolean.hass_alerts
+      - input_boolean.network_alerts
 
 input_boolean:
+  bluetooth_alerts:
+    name: Bluetooth Alerts
+    icon: mdi:alert
   hass_alerts:
     name: "Hass Alerts"
     icon: mdi:alert
+  network_alerts:
+    name: Network Alerts
+    icon: mdi:alert
 
 template:
+  - binary_sensor:
+      - name: "Alert Disabled"
+        unique_id: alert_disabled
+        icon: mdi:alert
+        device_class: problem
+        state: "{{ states.alert|selectattr('state','eq','off') | list | count > 0 }}"
+
+      - name: Bluetooth Offline Alert
+        unique_id: bluetooth_offline_alert
+        icon: mdi:bluetooth
+        device_class: problem
+        delay_on: 60
+        state: >
+          {{ expand(state_attr('sensor.bluetooth_devices', 'entity_id'))
+                | selectattr('state', 'eq', 'home') | list | count == 0
+              and expand(state_attr('sensor.bluetooth_le_devices', 'entity_id'))
+                | selectattr('state', 'eq', 'home') | list | count == 0
+          }}
+
+      - name: "Unavailable Entities Alert"
+        unique_id: unavailable_entities_alert
+        device_class: problem
+        delay_on: 300
+        state: >
+          {{ states('sensor.unavailable_entities_filtered') | int(-1) > 0
+              and is_state('input_boolean.hass_alerts', 'on')
+              and is_state('input_boolean.startup_pending', 'off')
+          }}
+
+      - name: Unknown Bluetooth Device Alert
+        unique_id: unknown_bluetooth_device_alert
+        device_class: problem
+        delay_on: 60
+        state: >
+          {{ states('sensor.unknown_bluetooth_devices') | int(0) > 0
+              and is_state('input_boolean.bluetooth_alerts', 'on')
+              and is_state('input_boolean.startup_pending', 'off')
+          }}
+
+      - name: Unknown Device Alert
+        unique_id: unknown_device_alert
+        device_class: problem
+        delay_on: 60
+        state: >
+          {{ states('sensor.unknown_devices') | int(0) > 0
+            and is_state('input_boolean.hass_alerts', 'on')
+            and is_state('input_boolean.startup_pending', 'off')
+          }}
+
+      - name: WAN Offline Alert
+        unique_id: wan_offline_alert
+        icon: mdi:wan
+        device_class: problem
+        delay_on: 60
+        state: >
+          {{ is_state('binary_sensor.wan', 'off')
+              and is_state('input_boolean.network_alerts', 'on')
+          }}
+        availability: "{{ has_value('binary_sensor.wan') }}"
+
+      - name: "ZWave Network Alert"
+        unique_id: zwave_network_alert
+        icon: mdi:z-wave
+        device_class: problem
+        delay_on: 300
+        state: >
+          {{ is_state('binary_sensor.zwave_network', 'off')
+              and is_state('input_boolean.hass_alerts', 'on')
+          }}
+
+      - name: "ZWave Device Alert"
+        unique_id: zwave_device_alert
+        icon: mdi:z-wave
+        device_class: problem
+        delay_on: 60
+        state: >
+          {{ is_state('binary_sensor.offline_zwave_devices', 'on')
+              and is_state('input_boolean.hass_alerts', 'on')
+          }}
+
   - trigger:
       - platform: homeassistant
         event: start
@@ -27,11 +114,4 @@ template:
         unique_id: github_connected
         icon: mdi:github
         device_class: connectivity
-        state: "{{ integration_entities('github')|select('has_value')|list|count > 0 }}"
-
-  - binary_sensor:
-      - name: "Alert Disabled"
-        unique_id: alert_disabled
-        icon: mdi:alert
-        device_class: problem
-        state: "{{ states.alert|selectattr('state','eq','off')|list|count > 0 }}"
+        state: "{{ integration_entities('github') | select('has_value') | list | count > 0 }}"
