chore: format and lint, adjusting config as needed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
       "**/bower_components": true,
       "**/custom_components": true,
       "**/node_modules": true,
+      "**/www/community": true,
       "**/*.code-search": true,
     },
 }
