--- a/packages/zwave.yaml
+++ b/packages/zwave.yaml
@@ -10,12 +10,12 @@ homeassistant:
 
 alert:
   zwave_network:
-    name: "ZWave Network"
-    title: "ZWave Network Offline"
-    message: "The Z-Wave network is offline."
+    name: 'ZWave Network'
+    title: 'ZWave Network Offline'
+    message: 'The Z-Wave network is offline.'
     done_message: clear_notification
     entity_id: binary_sensor.zwave_network_alert
-    state: "on"
+    state: 'on'
     repeat: 60
     # notifiers: marcus
     data:
@@ -32,18 +32,18 @@ alert:
       # color: !secret SEVERE_COLOR
       # vibrationPattern: !secret ALERT_VIBRATION
       actions:
-        - title: "Pause"
+        - title: 'Pause'
           action: pause_alert_zwave_network
 
-        - title: "Restart"
+        - title: 'Restart'
           action: restart_zwave_network
 
-        - title: "Reboot"
+        - title: 'Reboot'
           action: reboot_router
 
   zwave_device:
-    name: "ZWave Device"
-    title: "ZWave Device Offline"
+    name: 'ZWave Device'
+    title: 'ZWave Device Offline'
     message: |
       {%- set sensors = expand(state_attr('binary_sensor.offline_zwave_devices', 'entity_id')) %}
       {%- for item in sensors %}
@@ -55,7 +55,7 @@ alert:
       {%- endfor %}
     done_message: clear_notification
     entity_id: binary_sensor.zwave_device_alert
-    state: "on"
+    state: 'on'
     repeat: 60
     # notifiers: marcus
     data:
@@ -72,10 +72,10 @@ alert:
       # color: !secret SEVERE_COLOR
       # vibrationPattern: !secret ALERT_VIBRATION
       actions:
-        - title: "Pause"
+        - title: 'Pause'
           action: pause_alert_zwave_device
 
-        - title: "Ping Devices"
+        - title: 'Ping Devices'
           action: ping_offline_zwave_devices
 
 template:
@@ -89,7 +89,7 @@ template:
       - platform: state
         entity_id: sensor.time
     binary_sensor:
-      - name: "ZWave Network"
+      - name: 'ZWave Network'
         unique_id: zwave_network
         icon: mdi:z-wave
         device_class: connectivity
@@ -100,7 +100,7 @@ template:
           }}
 
   - binary_sensor:
-      - name: "Offline ZWave Devices"
+      - name: 'Offline ZWave Devices'
         unique_id: offline_zwave_devices
         icon: mdi:z-wave
         device_class: problem
@@ -118,7 +118,7 @@ template:
             }}
 
   - sensor:
-      - name: "ZWave Status"
+      - name: 'ZWave Status'
         unique_id: zwave_status
         icon: mdi:z-wave
         state: >
