--- a/panel_custom.yaml
+++ b/panel_custom.yaml
@@ -3,7 +3,7 @@
   sidebar_title: Integrations
   sidebar_icon: mdi:home-assistant
   js_url: /api/hassio/app/entrypoint.js
-  url_path: "config/integrations"
+  url_path: 'config/integrations'
   embed_iframe: true
   require_admin: true
   config:
@@ -13,7 +13,7 @@
   sidebar_title: Add-ons
   sidebar_icon: mdi:puzzle
   js_url: /api/hassio/app/entrypoint.js
-  url_path: "hassio/dashboard"
+  url_path: 'hassio/dashboard'
   embed_iframe: true
   require_admin: true
   config:
@@ -23,7 +23,7 @@
   sidebar_title: Logs
   sidebar_icon: mdi:book-cog
   js_url: /api/hassio/app/entrypoint.js
-  url_path: "config/logs"
+  url_path: 'config/logs'
   embed_iframe: true
   require_admin: true
   config:
@@ -33,7 +33,7 @@
   sidebar_title: States
   sidebar_icon: mdi:alpha-s-box
   js_url: /api/hassio/app/entrypoint.js
-  url_path: "developer-tools/state"
+  url_path: 'developer-tools/state'
   embed_iframe: true
   require_admin: true
   config:
