--- a/frontend.yaml
+++ b/frontend.yaml
@@ -2,4 +2,4 @@
 extra_module_url:
   - /hacsfiles/hass-bha-icons/hass-bha-icons.js
   - /hacsfiles/lovelace-card-mod/card-mod.js
-themes: !include_dir_merge_named /config/frontend/themes
+themes: !include_dir_merge_named frontend/themes
