fix: import upstream `pymyq` per home-assistant/core#99947

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto eol=lf
 
 /custom_components/** linguist-vendored
+/pymyq/**             linguist-vendored
 /www/**               linguist-vendored
 .HA_VERSION           linguist-generated
