--- a/recorder.yaml
+++ b/recorder.yaml
@@ -4,12 +4,15 @@
 purge_keep_days: 31
 exclude:
   domains:
+    - calendar
     - group
+    - hacs
+    - sun
+    - updater
   entities:
     - sensor.date
     - sensor.date_time
     - sensor.time
-    - sun.sun
 
 include:
   domains:
@@ -17,7 +20,6 @@ include:
     - alert
     - automation
     - binary_sensor
-    - calendar
     - climate
     - cover
     - device_tracker
