--- a/recorder.yaml
+++ b/recorder.yaml
@@ -4,12 +4,21 @@
 purge_keep_days: 31
 exclude:
   domains:
+    - calendar
     - group
+    - hacs
+    - sun
+    - updater
   entities:
     - sensor.date
     - sensor.date_time
     - sensor.time
-    - sun.sun
+  entity_globs:
+    - sensor.octoprint_*
+    - sensor.pi_hole_*
+    - sensor.speedtest_*
+    - sensor.*uptime*
+    - sensor.*random*
 
 include:
   domains:
@@ -17,7 +26,6 @@ include:
     - alert
     - automation
     - binary_sensor
-    - calendar
     - climate
     - cover
     - device_tracker
