chore: update VS Code workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.associations": {
     "*.yaml": "home-assistant",
+    "*.yml": "home-assistant",
     "**/.github/workflows/*.yaml": "yaml",
     ".prettierrc.yaml": "yaml",
     ".yamllint*": "yaml"
