--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ name: CI
 'on':
   pull_request:
   push:
-    branches: [main]
+    branches: [main, 'renovate/**']
   workflow_dispatch:
 
 concurrency:
@@ -43,20 +43,22 @@ jobs:
       - name: ⤵️ Checkout Branch
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
+          fetch-depth: 0
           ref: ${{ github.head_ref }}
       - name: 💅🏽 Run Prettier
         uses: creyD/prettier_action@31355f8eef017f8aeba2e0bc09d8502b13dbbad1 # v4.3
         env:
           PRETTIER_VERSION: 3.1.1 # renovate: datasource=npm depName=prettier
         with:
+          dry: true
+          only_changed: true
           prettier_options: --check .
           prettier_version: ${{ env.PRETTIER_VERSION }}
 
-  ha_version:
-    name: 🔩 Get HA Version
+  check-home-assistant-config:
+    name: 🧪 Check Home Assistant Config
+    needs: [yamllint, remarklint, prettier]
     runs-on: ubuntu-latest
-    outputs:
-      value: ${{ steps.ha_version.outputs.value }}
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
@@ -65,16 +67,8 @@ jobs:
         run: |
           HA_VERSION=$(<.HA_VERSION)
           echo '{value}={$HA_VERSION}' >> $GITHUB_OUTPUT
-
-  check-home-assistant-config:
-    name: 🧪 Check Home Assistant Config
-    needs: [yamllint, remarklint, prettier, ha_version]
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - name: 🚀 Run Home Assistant Config Check
         uses: frenck/action-home-assistant@941d5d917f4c1c7a7e7d4087526daf90d53f4437 # v1.4.1
         with:
           secrets: include
-          version: ${{ needs.ha_version.outputs.value }}
+          version: ${{ steps.ha_version.outputs.value }}
