chore: minor tweaks

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -11,7 +11,15 @@ branches:
     protection:
       required_status_checks:
         strict: false
-        contexts: ['🧹 YAML Lint', '🧹 Remark Lint', '🧹 Prettier', '🧪 Check Home Assistant Config']
+        contexts:
+          [
+            '🧹 YAML Lint',
+            '🧹 Remark Lint',
+            '🧹 Prettier',
+            '🧪 Check Home Assistant Config',
+            'Renovate',
+            'Update Repository Settings',
+          ]
       enforce_admins: true
       required_pull_request_reviews: null
       restrictions: null
