chore: update workflows (#117)

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -10,9 +10,16 @@ branches:
   - name: main
     protection:
       required_status_checks:
-        strict: true
+        strict: false
         contexts:
-          ['🧹 YAML Lint', '🧹 Remark Lint', '🧹 Prettier', '🔩 Get HA Version', '🧪 Check Home Assistant Config']
+          [
+            '🧹 YAML Lint',
+            '🧹 Remark Lint',
+            '🧹 Prettier',
+            '🧪 Check Home Assistant Config',
+            'Renovate',
+            'Update Repository Settings',
+          ]
       enforce_admins: true
       required_pull_request_reviews: null
       restrictions: null
