fix: bump `marcusrbrown/renovate-config` preset to v1.15.8

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -8,6 +8,7 @@ name: Renovate
   pull_request:
     types: [edited]
   push:
+    branches: ['**']
   workflow_dispatch:
     inputs:
       print_config:
