--- a/.github/workflows/update-repo-settings.yaml
+++ b/.github/workflows/update-repo-settings.yaml
@@ -1,49 +1,18 @@
 # Update repository settings to match the definitions in .github/settings.yml.
 ---
-name: Update Repository Settings
+name: Update Repo Settings
 
 'on':
   push:
+    branches: [main]
   schedule:
     - cron: '0 3 * * *' # every day at 03:00 UTC
   workflow_dispatch:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
-
-permissions: {}
-
 jobs:
   update-repo-settings:
-    name: Update Repository Settings
-    runs-on: ubuntu-latest
-    steps:
-      - if: github.event_name == 'push' && github.ref =='refs/heads/main'
-        name: Checkout Repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-
-      - id: filter
-        if: github.event_name == 'push' && github.ref =='refs/heads/main'
-        name: Filter Changed Files
-        uses: dorny/paths-filter@7267a8516b6f92bdb098633497bad573efdbf271 # v2.12.0
-        with:
-          filters: |
-            changes:
-              - '.github/settings.yml'
-              - '.github/workflows/update-repo-settings.yaml'
-
-      - id: get-workflow-access-token
-        if: github.event_name != 'push' || steps.filter.outputs.changes == 'true'
-        uses: peter-murray/workflow-application-token-action@8e1ba3bf1619726336414f1014e37f17fbadf1db # v2.1.0
-        name: Get Workflow Access Token
-        with:
-          application_id: ${{ secrets.APPLICATION_ID }}
-          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
-          permissions: 'administration:write, contents:read, issues:write'
-
-      - env:
-          GITHUB_TOKEN: ${{ steps.get-workflow-access-token.outputs.token }}
-        if: github.event_name != 'push' || steps.filter.outputs.changes == 'true'
-        name: Update Repository Settings
-        uses: elstudio/actions-settings@v3-beta
+    name: Update Repo Settings
+    secrets:
+      APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
+      APPLICATION_PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+    uses: bfra-me/.github/.github/workflows/update-repo-settings.yaml@0f87da9c405855396974b3b5e21530d35df954ef # v1.1.0
